--- a/views/business/sample-edit.html
+++ b/views/business/sample-edit.html
@@ -25,19 +25,48 @@
         <div class="layui-card-body" style="padding: 15px;">
             <form class="layui-form" action="" lay-filter="component-form-group">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">样品名称</label>
+                    <label class="layui-form-label">款号</label>
                     <div class="layui-input-inline">
-                        <input type="hidden" name="id" lay-verify="" autocomplete="off" class="layui-input">
-                        <input type="text" name="sampleName" lay-verify="required" autocomplete="off" placeholder="请输入产品名称" class="layui-input">
+                        <input type="hidden" name="id" lay-verify="required" class="layui-input">
+                        <input type="text" name="sampleCode" lay-verify="required" autocomplete="off" placeholder="请输入款号" class="layui-input">
                     </div>
-                    <label class="layui-form-label">样品型号</label>
+                    <label class="layui-form-label">针形</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="sampleCode" lay-verify="" autocomplete="off" placeholder="请输入样品型号" class="layui-input">
+                        <input type="text" name="needle" lay-verify="" autocomplete="off" placeholder="请输入针形"
+                               class="layui-input">
+                    </div>
+                    <label class="layui-form-label">款式</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="style" lay-verify="" autocomplete="off" placeholder="请输入款式"
+                               class="layui-input">
                     </div>
                 </div>
-
                 <div class="layui-form-item">
+                    <label class="layui-form-label">材料</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="material" lay-verify="required" autocomplete="off"
+                               placeholder="请输入材料" class="layui-input">
+                    </div>
+                    <label class="layui-form-label">公司</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="company" lay-verify="" autocomplete="off" placeholder="请输入公司"
+                               class="layui-input">
+                    </div>
+                    <label class="layui-form-label">客户品牌</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="brand" lay-verify="" autocomplete="off" placeholder="请输入客户品牌"
+                               class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">颜色</label>
+                    <div class="layui-input-inline">
+                        <!--<input type="text" name="color" lay-verify="required" autocomplete="off" placeholder="请输入颜色" class="layui-input">-->
+                        <select name="color" lay-search lay-filter="color">
+                            <option value="">请选择</option>
+                        </select>
 
+                    </div>
                 </div>
 
                 <div class="layui-form-item">
@@ -61,37 +90,33 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <table class="layui-table">
-                        <colgroup>
-                            <col width="200">
-                            <col width="200">
-                            <col width="100">
-                            <col width="100">
-                            <col width="100">
-                            <col>
-                            <col width="50">
-                        </colgroup>
-                        <thead>
-                        <tr>
-                            <th>物品名称</th>
-                            <th>物品型号</th>
-                            <th>颜色</th>
-                            <th>数量</th>
-                            <th>单位</th>
-                            <th>备注</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                    <label class="layui-form-label"></label>
+                    <div class="layui-input-block">
+                        <table class="layui-table">
+                            <colgroup>
+                                <col width="200">
+                                <col width="200">
+                                <col width="100">
+                                <col width="50">
+                            </colgroup>
+                            <thead>
+                            <tr>
+                                <th>尺寸</th>
+                                <th>初样</th>
+                                <th>单位</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">备注</label>
                     <div class="layui-input-block">
-                        <textarea class="layui-textarea" id="LAY_demo1" name="remarks" style="display: none">
-                        </textarea>
+                        <textarea placeholder="请输入内容" class="layui-textarea" name="remarks"></textarea>
                     </div>
                 </div>
 
@@ -116,50 +141,64 @@
     }).use(['form', 'laydate', 'layedit', 'upload'], function () {
         var $ = layui.$
             , layer = layui.layer
-            , laydate = layui.laydate
             , form = layui.form
             , layedit = layui.layedit
             ,upload = layui.upload;
 
         $.ajax({
             type: 'GET',
-            //contentType: "application/json;",
-            url: domain + "api/sample/findSample/" + GetQueryString("id"),
+            contentType: "application/json;",
+            url: domain + "api/color/findColor",
             success: function (result) {
                 if (result.code == 0) {
-                    var data = result.data;
-                    var sample = data.sample;
-                    if(undefined != sample && null != sample && "" != sample && "null" != sample){
-                        $("input[name='id']").val(sample.id);
-                        $("input[name='orderId']").val(GetQueryString("orderId"));
-                        $("input[name='sampleName']").val(sample.sampleName);
-                        $("input[name='sampleCode']").val(sample.sampleCode);
-                        if(sample.photoUrl){
-                            var images = sample.photoUrl.split(",");
-                            $.each(images, function (index, image) {
-                                $('#upload-more-list').append('<img src="'+ image +'" class="layui-upload-img">');
-                                $('#upload-more-list').after('<input type="hidden" name="photoUrls" value="' + image + '" class="layui-input">');
-                            });
-                        }
-                        if(sample.remarks){
-                            $('.layui-textarea').text(sample.remarks);
-                            var indexEdit = layedit.build('LAY_demo1', {
-                                tool: ['strong','italic','underline','del','|','left','center','right','link','unlink','face']
-                                ,height: 100
-                            });
-                        }
-                    }
-                    $.each(data.materials, function (index, material) {
-                        if(sample.status === 1){
-                            $(".layui-table").find("tbody").append("<tr><td style='display: none;' id='id'>" + material.id + "</td><td>" + material.goodsName + "</td>" +
-                                "<td>" + material.goodsModel + "</td><td>" + material.color + "</td><td>" + material.num + "</td>" +
-                                "<td>" + material.unit + "</td><td>" + material.remarks + "</td><td></td></tr>");
-                        }else {
-                            $(".layui-table").find("tbody").append("<tr><td style='display: none;' id='id'>" + material.id + "</td><td>" + material.goodsName + "</td>" +
-                                "<td>" + material.goodsModel + "</td><td>" + material.color + "</td><td>" + material.num + "</td>" +
-                                "<td>" + material.unit + "</td><td>" + material.remarks + "</td><td><a href='javascript:void(0);' class='layui-btn layui-btn-xs layui-delete'>删除</a></td></tr>");
+                    $.each(result.data, function (index, value) {
+                        $("select[name='color']").append("<option value=\"" + value.colorName + "\">" + value.colorName + "</option>");
+                    })
+
+                    $.ajax({
+                        type: 'GET',
+                        url: domain + "api/sample/findSample/" + GetQueryString("id"),
+                        success: function (result) {
+                            if (result.code == 0) {
+                                var data = result.data;
+                                var sample = data.sample;
+                                if(undefined != sample && null != sample && "" != sample && "null" != sample){
+                                    $("input[name='id']").val(sample.id);
+                                    $("input[name='sampleCode']").val(sample.sampleCode);
+                                    $("input[name='needle']").val(sample.needle);
+                                    $("input[name='style']").val(sample.style);
+                                    $("input[name='material']").val(sample.material);
+                                    $("input[name='company']").val(sample.company);
+                                    $("input[name='brand']").val(sample.brand);
+                                    $("select[name='color']").val(sample.color);
+                                    form.render('select');
+                                    $("input[name='remarks']").val(sample.remarks);
+                                    if(sample.photoUrl){
+                                        var images = sample.photoUrl.split(",");
+                                        $.each(images, function (index, image) {
+                                            $('#upload-more-list').append('<img src="'+ image +'" class="layui-upload-img">');
+                                            $('#upload-more-list').after('<input type="hidden" name="photoUrls" value="' + image + '" class="layui-input">');
+                                        });
+                                    }
+                                }
+                                $.each(data.details, function (index, detail) {
+                                    if(sample.status === 1){
+                                        $(".layui-table").find("tbody").append("<tr><td style='display: none;' id='id'>" + detail.id + "</td><td>" + detail.attribute + "</td>" +
+                                            "<td>" + detail.value + "</td><td>" + detail.unit + "</td><td></td></tr>");
+                                    }else {
+                                        $(".layui-table").find("tbody").append("<tr><td style='display: none;' id='id'>" + detail.id + "</td><td>" + detail.attribute + "</td>" +
+                                            "<td>" + detail.value + "</td><td>" + detail.unit + "</td><td><a href='javascript:void(0);' class='layui-btn layui-btn-xs layui-delete'>删除</a></td></tr>");
+                                    }
+                                });
+                            } else {
+                                layer.alert(result.msg);
+                            }
+                        },
+                        error: function () {
+                            console.log("网络错误！");
                         }
                     });
+
                 } else {
                     layer.alert(result.msg);
                 }
@@ -169,15 +208,17 @@
             }
         });
 
+
+
         $(".layui-table").on("click", ".layui-delete", function () {
             var $tr = $(this).closest("tr");
-            layer.confirm('确认删除改原材料？', function (index) {
+            layer.confirm('确认删除样品尺寸？', function (index) {
                 if($($tr).find("td").eq(0).attr("id")){
                     var id = $($tr).find("td").eq(0).text();
                     $.ajax({
                         type: 'GET',
                         contentType: "application/json;",
-                        url: domain + "api/material/delete/" + id,
+                        url: domain + "api/sample/deleteSampleDetail/" + id,
                         success: function (result) {
                             if (result.code == 0) {
                                 layer.msg(result.msg);
@@ -211,24 +252,18 @@
                 var arr = [];
                 $.each(_tr, function (index, tr) {
                     var _td = $(tr).find("td");
-                    var goods = {};
+                    var detail = {};
                     if($(_td[0]).attr("id")){
-                        goods.id =  $(_td[0]).text();
-                        goods.goodsName =  $(_td[1]).text();
-                        goods.goodsModel =  $(_td[2]).text();
-                        goods.color = $( _td[3]).text();
-                        goods.num =  $(_td[4]).text();
-                        goods.unit =  $(_td[5]).text();
-                        goods.remarks =  $(_td[6]).text();
+                        detail.id =  $(_td[0]).text();
+                        detail.attribute = $(_td[1]).text();
+                        detail.value = $(_td[2]).text();
+                        detail.unit = $(_td[3]).text();
                     } else {
-                        goods.goodsName =  $(_td[0]).text();
-                        goods.goodsModel =  $(_td[1]).text();
-                        goods.color = $( _td[2]).text();
-                        goods.num =  $(_td[3]).text();
-                        goods.unit =  $(_td[4]).text();
-                        goods.remarks =  $(_td[5]).text();
+                        detail.attribute = $(_td[0]).text();
+                        detail.value = $(_td[1]).text();
+                        detail.unit = $(_td[2]).text();
                     }
-                    arr.push(goods);
+                    arr.push(detail);
                 })
 
                 var photoUrls = [];
@@ -237,7 +272,7 @@
                 })
                 var params ={
                     sample: data,
-                    materialList: arr,
+                    detailList: arr,
                     sampleUrls: photoUrls.join(",")
                 }
                 console.log(photoUrls);
@@ -263,12 +298,6 @@
             });
         });
 
-        //构建一个默认的编辑器
-        var indexEdit = layedit.build('LAY_demo1', {
-            tool: ['strong','italic','underline','del','|','left','center','right','link','unlink','face']
-            ,height: 100
-        });
-
         //多图片上传
         upload.render({
             elem: '#upload-more'
@@ -290,24 +319,21 @@
                 }
             }
         });
-        
+
         $("#material-more").click(function () {
             var index = layer.open({
                 type: 2,
-                title: "原材料",
-                content: 'material-add.html',
-                area: ['300px', '300px'],
+                title: "工艺尺寸",
+                content: 'sample-detail-add.html',
+                area: ['500px', '320px'],
                 maxmin: true,
                 success: function (layero, index) {
                     var body = layer.getChildFrame('body', index);
-
                 }
             });
-            layer.full(index);
+            //layer.full(index);
         });
 
-        /*$('.layui-textarea').text("<img src=\"file:///D:/IdeaProjects/layuiAdmin/layuiadmin/layui/images/face/29.gif\" alt=\"[拜拜]\">");
-        var index= layedit.build('LAY_demo1');*/
         form.render(null, 'component-form-group');
 
 
@@ -317,33 +343,26 @@
             var arr = [];
             $.each(_tr, function (index, tr) {
                 var _td = $(tr).find("td");
-                var goods = {};
+                var detail = {};
                 if($(_td[0]).attr("id")){
-                    goods.id =  $(_td[0]).text();
-                    goods.goodsName =  $(_td[1]).text();
-                    goods.goodsModel =  $(_td[2]).text();
-                    goods.color = $( _td[3]).text();
-                    goods.num =  $(_td[4]).text();
-                    goods.unit =  $(_td[5]).text();
-                    goods.remarks =  $(_td[6]).text();
+                    detail.id =  $(_td[0]).text();
+                    detail.attribute = $(_td[0]).text();
+                    detail.value = $(_td[1]).text();
+                    detail.unit = $(_td[2]).text();
                 } else {
-                    goods.goodsName =  $(_td[0]).text();
-                    goods.goodsModel =  $(_td[1]).text();
-                    goods.color = $( _td[2]).text();
-                    goods.num =  $(_td[3]).text();
-                    goods.unit =  $(_td[4]).text();
-                    goods.remarks =  $(_td[5]).text();
+                    detail.attribute = $(_td[0]).text();
+                    detail.value = $(_td[1]).text();
+                    detail.unit = $(_td[2]).text();
                 }
-                arr.push(goods);
+                arr.push(detail);
             })
-            data.field.remarks = layedit.getContent(indexEdit);
             var photoUrls = [];
             $.each($("input[name='photoUrls']"), function (index, value) {
                 photoUrls.push($(value).val());
             })
             var params ={
                 sample: data.field,
-                materialList: arr,
+                detailList: arr,
                 sampleUrls: photoUrls.join(",")
             }
             console.log(photoUrls);
